2012-08-23  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3561093:
    * org/jfree/chart/renderer/RendererUtilities.java
    (findLiveItemsLowerBound): changed while loop expression,
    (findLiveItemsUpperBound): likewise.

2012-07-28  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/data/general/Series.java
    (setKey): Update exception argument and Javadocs,
    * org/jfree/data/general/XYSeriesCollection.java
    (vetoableChange) : Call getSeriesIndex() rather than getSeries(),
    * tests/org/jfree/data/xy/junit/XYSeriesCollectionTests.java
    (testSeriesRename): New test method.

2012-07-17  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/data/time/Month.java
    (getFirstMillisecond): Use getTimeInMillis();
    (getLastMillisecond): Likewise;
    * org/jfree/data/time/Year.java
    Likewise;
    * org/jfree/data/time/Quarter.java
    Likewise;
    * org/jfree/data/time/Week.java
    Likewise;
    * org/jfree/data/time/Day.java
    Likewise,
    * org/jfree/data/time/Hour.java
    Likewise,
    * org/jfree/data/time/Minute.java
    Likewise,
    * org/jfree/data/time/Second.java
    Likewise;
    * org/jfree/data/time/Millisecond.java
    Likewise.

2012-07-17  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/AbstractRenderer.java
    Remove use of BooleanUtilities throughout;
    * org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
    Likewise.

2012-07-12  David Gilbert <david.gilbert@object-refinery.com>

    (from Leo Leung)
    * org/jfree/chart/LocalisationBundle_ja.properties:
    Updated translations.

2012-07-05  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/encoders/ImageEncoderFactory.java
    (encoders): Change type to Map,
    (init) : Remove JDK 1.3 specific code.

2012-07-05  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/ChartPanel.java